sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:13: error: reassignment to val
            i = i -1
              ^